# motionlabsai-technical-drift-agent

./: .gitignore
cvMLAgentBaseline/: .gitignore  AGENTIC_MCP_ARCHITECTURE.md  COLLECTION_COMPATIBILITY_REPORT.md  COLLECTION_SCHEMAS_AND_PIPELINE.md  COMPATIBILITY_FIXES_APPLIED.md  DRIFT_ALERT_FORMATS.md  DRIFT_COACH_FOLLOWUP_SUMMARY.md  DRIFT_DETECTION_ANALYSIS.md  DRIFT_DETECTION_FORMULA.md  DRIFT_DETECTION_LOGIC_AND_COLLECTIONS.md  DRIFT_DETECTION_TEST_RESULTS.md  Dockerfile  INSIGHTS_VS_TRENDS.md  PROCESSING_ORDER.md  README.md  TEMP_DIR_FIX.md  acl_risk_retrieval_agent.py  acl_trajectory_analyzer.py  analyze_collection_compatibility.py  cleanup_readmes.sh  cloudflare_stream.py  coach_acl_report.py  coach_followup_worker.py  cv_tools.py  deep_search_reasoning.py  docker-compose.yml  drift_alert_worker.py  dynamic_metric_discovery.py  env_template.txt  face_recognition_tool.py  form_correction_retrieval_agent.py  guardrails.py  infer_video.py  landing_detection.py  list_faces.py  llm_reasoning_selector.py  main.py  manage_faces.py  memory_integration.py  metrics_processor.py  (+38 more)
cvMLAgentBaseline/agentic_mcp/: .gitignore  INITIALIZATION.md  MCP_VS_SUPERVISOR.md  MEMORY_AND_CONTEXT.md  README.md  SUPERVISOR_PATTERN.md  agent.py  agent_mcp.py  agent_mcp_supervisor.py  config.py  mcp_server.py  requirements.txt  supervisor_agent.py  test_mcp_agent.py  test_mcp_agent_simple.py  test_mcp_supervisor.py
cvMLAgentBaseline/agentic_mcp/examples/: basic_usage.py  basic_usage_mcp.py  full_pipeline.py  memory_example.py  supervisor_usage.py
(+14 files in other folders)
